@@ -1,3 +1,8 @@
+develop
+=======
+
+* Move burpui agent modules to another role
+
 v1.30
 =====
 
